// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThumbScrollerButton component renders correctly 1`] = `
<div>
  <button
    aria-label="Scroll right"
    class="MuiButtonBase-root ThumbScrollerButton-root-1 ThumbScrollerButton-right-3"
    tabindex="-1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root ThumbScrollerButton-icon-4"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ThumbScrollerButton component renders correctly when className is provided 1`] = `
<div>
  <button
    aria-label="Scroll left"
    class="MuiButtonBase-root testClass ThumbScrollerButton-root-9 ThumbScrollerButton-left-10"
    tabindex="-1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root ThumbScrollerButton-icon-12"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
      />
    </svg>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ThumbScrollerButton component renders correctly when direction is left 1`] = `
<div>
  <button
    aria-label="Scroll left"
    class="MuiButtonBase-root ThumbScrollerButton-root-5 ThumbScrollerButton-left-6"
    tabindex="-1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root ThumbScrollerButton-icon-8"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
      />
    </svg>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
